examples/ok/okMath.k
@Use("java")
public void main() {
    integer a = 10;
    integer b = 20;
    
    // Testando precedência e operações válidas
    integer result = (a * 2) + (b / 2);
    
    if (result > 25) {
        println(result);
    } 
    afterall;

    return;
}