examples/error/invalidMainSignature.k
@Use("java")
public integer main() {
    return 0;
}
